--- a/index.html
+++ b/index.html
@@ -12,13 +12,11 @@
   <!-- Header -->
   <header class="bg-gray-900 border-b border-gray-800 p-4 flex items-center justify-between">
     <div class="flex items-center gap-3">
-      <div class="bg-blue-600 p-2 rounded-lg">
-        <svg xmlns="http://www.w3.org/2000/svg" class="h-5 w-5 text-white" fill="currentColor" viewBox="0 0 20 20">
-          <path d="M17.414 2.586a2 2 0 00-2.828 0L6 11.172V14h2.828l8.586-8.586a2 2 0 000-2.828z"/>
-        </svg>
+      <div class="h-10 w-10">
+        <img src="images/logo.png" alt="Move It Logo" class="h-full w-full object-contain rounded-lg">
       </div>
       <div>
-        <h1 class="font-bold text-lg">Move It</h1>
+        <h1 class="font-bold text-lg">Move It!</h1>
         <p class="text-gray-400 text-sm">Let's Move it, Move it!</p>
       </div>
     </div>
@@ -46,40 +44,79 @@
     </div>
   </header>
 
-  <!-- Stats -->
-  <section class="p-4 grid grid-cols-4 gap-4">
-    <div class="bg-gray-800 p-4 rounded-lg shadow text-center">
-      <p class="text-gray-400">Total Tasks</p>
-      <p id="totalTasks" class="text-2xl font-bold">0</p>
+ <!-- Stats -->
+  <section class="p-6 grid grid-cols-4 gap-6">
+    <!-- Total Tasks -->
+    <div class="bg-gray-800 p-5 rounded-lg shadow flex items-center justify-between">
+      <div>
+        <p class="text-gray-400 text-sm">Total Tasks</p>
+        <p id="totalTasks" class="text-2xl font-bold text-white">0</p>
+      </div>
+      <div class="bg-blue-600 w-12 h-12 rounded-lg flex items-center justify-center">
+        <img src="images/totaltask.png" alt="Total Tasks" class="h-10 w-10 object-contain">
+      </div>
     </div>
-    <div class="bg-gray-800 p-4 rounded-lg shadow text-center">
-      <p class="text-gray-400">Not Started</p>
-      <p id="notStartedTasks" class="text-2xl font-bold text-red-500">0</p>
+
+    <!-- Not Started -->
+    <div class="bg-gray-800 p-5 rounded-lg shadow flex items-center justify-between">
+      <div>
+        <p class="text-gray-400 text-sm">Not Started</p>
+        <p id="notStartedTasks" class="text-2xl font-bold text-red-500">0</p>
+      </div>
+      <div class="bg-red-600 p-3 rounded-lg">
+        <svg xmlns="http://www.w3.org/2000/svg" class="h-6 w-6 text-white" fill="currentColor" viewBox="0 0 20 20">
+          <path d="M10 3a7 7 0 100 14A7 7 0 0010 3zM9 7h2v4H9V7zm0 6h2v2H9v-2z" />
+        </svg>
+      </div>
     </div>
-    <div class="bg-gray-800 p-4 rounded-lg shadow text-center">
-      <p class="text-gray-400">In Progress</p>
-      <p id="inProgressTasks" class="text-2xl font-bold text-yellow-500">0</p>
+
+    <!-- In Progress -->
+    <div class="bg-gray-800 p-5 rounded-lg shadow flex items-center justify-between">
+      <div>
+        <p class="text-gray-400 text-sm">In Progress</p>
+        <p id="inProgressTasks" class="text-2xl font-bold text-yellow-500">0</p>
+      </div>
+      <div class="bg-yellow-500 p-3 rounded-lg">
+        <svg xmlns="http://www.w3.org/2000/svg" class="h-6 w-6 text-white" fill="currentColor" viewBox="0 0 20 20">
+          <path d="M10 2a8 8 0 100 16 8 8 0 000-16zm1 4H9v5h4v-2h-2V6z" />
+        </svg>
+      </div>
     </div>
-    <div class="bg-gray-800 p-4 rounded-lg shadow text-center">
-      <p class="text-gray-400">Completed</p>
-      <p id="completedTasks" class="text-2xl font-bold text-green-500">0</p>
+
+    <!-- Completed -->
+    <div class="bg-gray-800 p-5 rounded-lg shadow flex items-center justify-between">
+      <div>
+        <p class="text-gray-400 text-sm">Completed</p>
+        <p id="completedTasks" class="text-2xl font-bold text-green-500">0</p>
+      </div>
+      <div class="bg-green-600 p-3 rounded-lg">
+        <svg xmlns="http://www.w3.org/2000/svg" class="h-6 w-6 text-white" fill="currentColor" viewBox="0 0 20 20">
+          <path fill-rule="evenodd" d="M16.707 5.293a1 1 0 00-1.414 0L9 11.586 6.707 9.293a1 1 0 00-1.414 1.414l3 3a1 1 0 001.414 0l7-7a1 1 0 000-1.414z" clip-rule="evenodd" />
+        </svg>
+      </div>
     </div>
   </section>
+
 
   <!-- Task Columns -->
   <section class="p-4 grid grid-cols-3 gap-4 flex-1">
     <div>
-      <h2 class="font-bold text-red-500 mb-2">Not Started</h2>
+      <h2 class="font-bold text-gray-200 mb-2 ml-2">Not Started</h2>
       <div id="notStartedList" class="bg-gray-800 p-4 rounded-lg min-h-[200px]"></div>
     </div>
+
     <div>
-      <h2 class="font-bold text-yellow-500 mb-2">In Progress</h2>
+      <h2 class="font-bold text-gray-200 mb-2 ml-2">In Progress</h2>
       <div id="inProgressList" class="bg-gray-800 p-4 rounded-lg min-h-[200px]"></div>
     </div>
+
     <div>
-      <h2 class="font-bold text-green-500 mb-2">Completed</h2>
+      <h2 class="font-bold text-gray-200 mb-2 ml-2">Completed</h2>
       <div id="completedList" class="bg-gray-800 p-4 rounded-lg min-h-[200px]"></div>
     </div>
+ </section>
+
+
   </section>
 
   <!-- Upcoming Deadlines -->
@@ -87,7 +124,6 @@
     <div class="bg-gray-800 p-4 rounded-lg">
       <div class="flex justify-between items-center mb-2">
         <h2 class="font-bold">Upcoming Deadlines</h2>
-        <a href="#" class="text-blue-400 text-sm">View Calendar</a>
       </div>
       <div id="deadlineList" class="space-y-2"></div>
     </div>
@@ -113,6 +149,47 @@
   <div id="toast" class="hidden fixed bottom-6 right-6 bg-gray-800 text-white px-4 py-2 rounded-lg shadow-lg">
     Task deleted. <button id="undoBtn" class="text-blue-400 ml-2">Undo</button>
   </div>
+
+  <!-- Add Task Modal -->
+  <div id="addTaskModal" class="hidden fixed inset-0 bg-black bg-opacity-50 flex justify-center items-center">
+    <div class="bg-gray-900 p-6 rounded-lg w-96">
+      <h2 id="modalTitle" class="text-xl font-bold mb-4">Add Task</h2>
+      <form id="taskForm" class="space-y-4">
+        <input type="hidden" id="taskId">
+
+        <div>
+          <label class="block text-sm">Task Name</label>
+          <input type="text" id="taskTitle" class="w-full bg-gray-800 text-gray-200 rounded-lg px-3 py-2" required>
+        </div>
+
+        <div>
+          <label class="block text-sm">Priority</label>
+          <select id="taskPriority" class="w-full bg-gray-800 text-gray-200 rounded-lg px-3 py-2">
+            <option value="high">High</option>
+            <option value="mid">Mid</option>
+            <option value="low">Low</option>
+          </select>
+        </div>
+
+        <div>
+          <label class="block text-sm">Due Date</label>
+          <input type="date" id="taskDueDate" class="w-full bg-gray-800 text-gray-200 rounded-lg px-3 py-2">
+        </div>
+
+        <div>
+          <label class="block text-sm">Due Time</label>
+          <input type="time" id="taskDueTime" class="w-full bg-gray-800 text-gray-200 rounded-lg px-3 py-2">
+        </div>
+
+        <div class="flex justify-end gap-2">
+          <button type="button" id="cancelBtn" class="bg-gray-600 px-4 py-2 rounded-lg">Cancel</button>
+          <button type="submit" id="submitTaskBtn" class="bg-blue-600 px-4 py-2 rounded-lg">Save Task</button>
+        </div>
+      </form>
+    </div>
+  </div>
+
+
 
   <script src="script.js"></script>
 </body>
