--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
 <body class="bg-gray-900 text-white flex flex-col min-h-screen">
 
   <!-- Header -->
-  <header class="bg-gray-900 border-b border-gray-800 p-4 flex items-center justify-between">
+  <header class="bg-[#0a1433] border-b border-gray-800 p-4 flex items-center justify-between">
     <div class="flex items-center gap-3">
       <div class="h-10 w-10">
         <img src="images/logo.png" alt="Move It Logo" class="h-full w-full object-contain rounded-lg">
@@ -27,24 +27,13 @@
     </div>
 
     <div class="flex items-center gap-3">
-      <select id="priorityFilter" class="bg-gray-800 text-gray-200 rounded-lg px-2 py-1">
-        <option value="all">All Tasks</option>
-        <option value="high">High Priority</option>
-        <option value="mid">Mid Priority</option>
-        <option value="low">Low Priority</option>
-      </select>
-      <select id="sortSelect" class="bg-gray-800 text-gray-200 rounded-lg px-2 py-1">
-        <option value="dateAdded">Date Added</option>
-        <option value="dueDate">Due Date</option>
-        <option value="priority">Priority</option>
-      </select>
       <button id="addTaskBtn" class="bg-blue-600 hover:bg-blue-700 text-white px-4 py-2 rounded-lg">
         + Add New Task
       </button>
     </div>
   </header>
 
- <!-- Stats -->
+  <!-- Stats -->
   <section class="p-6 grid grid-cols-4 gap-6">
     <!-- Total Tasks -->
     <div class="bg-gray-800 p-5 rounded-lg shadow flex items-center justify-between">
@@ -63,10 +52,8 @@
         <p class="text-gray-400 text-sm">Not Started</p>
         <p id="notStartedTasks" class="text-2xl font-bold text-red-500">0</p>
       </div>
-      <div class="bg-red-600 p-3 rounded-lg">
-        <svg xmlns="http://www.w3.org/2000/svg" class="h-6 w-6 text-white" fill="currentColor" viewBox="0 0 20 20">
-          <path d="M10 3a7 7 0 100 14A7 7 0 0010 3zM9 7h2v4H9V7zm0 6h2v2H9v-2z" />
-        </svg>
+      <div class="bg-red-600 w-12 h-12 rounded-lg flex items-center justify-center">
+        <img src="images/notstarted.png" alt="Not Started" class="h-10 w-10 object-contain">
       </div>
     </div>
 
@@ -76,10 +63,8 @@
         <p class="text-gray-400 text-sm">In Progress</p>
         <p id="inProgressTasks" class="text-2xl font-bold text-yellow-500">0</p>
       </div>
-      <div class="bg-yellow-500 p-3 rounded-lg">
-        <svg xmlns="http://www.w3.org/2000/svg" class="h-6 w-6 text-white" fill="currentColor" viewBox="0 0 20 20">
-          <path d="M10 2a8 8 0 100 16 8 8 0 000-16zm1 4H9v5h4v-2h-2V6z" />
-        </svg>
+      <div class="bg-yellow-500 w-12 h-12 rounded-lg flex items-center justify-center">
+        <img src="images/loading.png" alt="In Progress" class="h-14 w-14 object-contain">
       </div>
     </div>
 
@@ -89,14 +74,31 @@
         <p class="text-gray-400 text-sm">Completed</p>
         <p id="completedTasks" class="text-2xl font-bold text-green-500">0</p>
       </div>
-      <div class="bg-green-600 p-3 rounded-lg">
-        <svg xmlns="http://www.w3.org/2000/svg" class="h-6 w-6 text-white" fill="currentColor" viewBox="0 0 20 20">
-          <path fill-rule="evenodd" d="M16.707 5.293a1 1 0 00-1.414 0L9 11.586 6.707 9.293a1 1 0 00-1.414 1.414l3 3a1 1 0 001.414 0l7-7a1 1 0 000-1.414z" clip-rule="evenodd" />
+      <div class="bg-green-600 w-12 h-12 rounded-lg flex items-center justify-center">
+        <svg xmlns="http://www.w3.org/2000/svg" class="h-6 w-6 text-white" fill="none" viewBox="0 0 24 24" stroke="currentColor" stroke-width="3">
+          <path stroke-linecap="round" stroke-linejoin="round" d="M5 13l4 4L19 7" />
         </svg>
       </div>
     </div>
   </section>
 
+  <!-- Priority Filter Buttons -->
+  <section class="px-6 mb-4 flex items-center gap-4">
+    <div class="flex flex-1 gap-4">
+      <button data-priority="all" class="priority-btn flex-1 bg-gray-700 hover:bg-gray-600 text-white px-4 py-3 rounded-lg font-medium">
+        All
+      </button>
+      <button data-priority="high" class="priority-btn flex-1 bg-red-600 hover:bg-red-700 text-white px-4 py-3 rounded-lg font-medium">
+        High
+      </button>
+      <button data-priority="mid" class="priority-btn flex-1 bg-yellow-500 hover:bg-yellow-600 text-white px-4 py-3 rounded-lg font-medium">
+        Mid
+      </button>
+      <button data-priority="low" class="priority-btn flex-1 bg-green-600 hover:bg-green-700 text-white px-4 py-3 rounded-lg font-medium">
+        Low
+      </button>
+    </div>
+  </section>
 
   <!-- Task Columns -->
   <section class="p-4 grid grid-cols-3 gap-4 flex-1">
@@ -114,9 +116,6 @@
       <h2 class="font-bold text-gray-200 mb-2 ml-2">Completed</h2>
       <div id="completedList" class="bg-gray-800 p-4 rounded-lg min-h-[200px]"></div>
     </div>
- </section>
-
-
   </section>
 
   <!-- Upcoming Deadlines -->
@@ -188,8 +187,6 @@
       </form>
     </div>
   </div>
-
-
 
   <script src="script.js"></script>
 </body>
