--- a/index.html
+++ b/index.html
@@ -10,14 +10,14 @@
 <body class="bg-gray-900 text-white flex flex-col min-h-screen">
 
   <!-- Header -->
-  <header class="bg-[#0a1433] border-b border-gray-800 p-4 flex items-center justify-between">
+  <header class="bg-blue-900 border-b border-gray-800 p-4 flex items-center justify-between">
     <div class="flex items-center gap-3">
       <div class="h-10 w-10">
         <img src="images/logo.png" alt="Move It Logo" class="h-full w-full object-contain rounded-lg">
       </div>
       <div>
         <h1 class="font-bold text-lg">Move It!</h1>
-        <p class="text-gray-400 text-sm">Let's Move it, Move it!</p>
+        <p class="text-gray-200 text-sm">Let's Move it, Move it!</p>
       </div>
     </div>
 
@@ -27,11 +27,12 @@
     </div>
 
     <div class="flex items-center gap-3">
-      <button id="addTaskBtn" class="bg-blue-600 hover:bg-blue-700 text-white px-4 py-2 rounded-lg">
+      <button id="addTaskBtn" class="bg-blue-700 hover:bg-blue-800 text-white px-4 py-2 rounded-lg">
         + Add New Task
       </button>
     </div>
   </header>
+
 
   <!-- Stats -->
   <section class="p-6 grid grid-cols-4 gap-6">
