--- a/index.html
+++ b/index.html
@@ -228,6 +228,18 @@
     </div>
   </div>
 
+  <!-- CONFIRMATION MODAL -->
+<div id="confirmModal" class="hidden fixed inset-0 bg-black bg-opacity-50 flex justify-center items-center z-50">
+  <div class="bg-gray-900 p-6 rounded-lg w-96 text-center">
+    <p id="confirmMessage" class="text-gray-200 text-lg mb-4">Are you sure?</p>
+    <div class="flex justify-center gap-4">
+      <button id="confirmCancelBtn" class="bg-gray-600 px-4 py-2 rounded-lg">Cancel</button>
+      <button id="confirmOkBtn" class="bg-red-600 px-4 py-2 rounded-lg text-white">Delete</button>
+    </div>
+  </div>
+</div>
+
+
   <!-- ==========================
        LOAD JS FILES IN MODULAR FORM
        storage.js -> tasks.js -> render.js -> filters.js -> search.js -> toast.js -> modal.js -> main.js
