--- a/templates2/login.html
+++ b/templates2/login.html
@@ -28,9 +28,9 @@
 
   <!-- JavaScript Files -->
   <!-- login.js handles user authentication logic -->
-  <script defer src="../static/js/login.js"></script>
+  <script defer src="{{ url_for('static', filename='js/login.js') }}"></script>
   <!-- togglePassword.js toggles visibility of the password input -->
-  <script src="../static/js/togglePassword.js"></script>
+  <script src="{{ url_for('static', filename='js/togglePassword.js') }}"></script>
 </head>
 
 <body class="bg-gray-900 text-white flex flex-col min-h-screen">
@@ -44,7 +44,7 @@
     <div class="flex items-center gap-3">
       <!-- App Logo -->
       <div class="h-10 w-10">
-        <img src="../static/images/logo.png" alt="Move It Logo" class="h-full w-full object-contain rounded-lg">
+        <img src="{{ url_for('static', filename='images/logo.png') }}" alt="Move It Logo" class="h-full w-full object-contain rounded-lg">
       </div>
 
       <!-- App Title -->
@@ -73,7 +73,7 @@
 
       <!-- Logo and Welcome Message -->
       <div class="flex flex-col items-center mb-6">
-        <img src="../static/images/logo.png" alt="Move It Logo" class="h-16 w-16 rounded-lg mb-3">
+        <img src="{{ url_for('static', filename='images/logo.png') }}" alt="Move It Logo" class="h-16 w-16 rounded-lg mb-3">
         <h2 class="text-2xl font-bold text-white-400">Move It!</h2>
         <p class="text-gray-400 text-sm mt-1">Welcome back to your productivity hub</p>
         <p class="text-green-500 text-xs mt-1">• Secure Login Portal •</p>
@@ -94,7 +94,7 @@
         <!-- Username Input -->
         <div>
           <label class="block text-sm mb-1 text-gray-300">Username or Email</label>
-          <input id="username" type="text" placeholder="Enter your username or email" required
+          <input id="username" name="username" type="text" placeholder="Enter your username or email" required
             class="w-full bg-gray-700 text-gray-200 rounded-lg px-3 py-2 focus:outline-none focus:ring-2 focus:ring-blue-500">
         </div>
 
@@ -103,7 +103,7 @@
           <label class="block text-sm mb-1 text-gray-300">Password</label>
           <div class="relative">
             <!-- Password field -->
-            <input id="password" type="password" placeholder="Enter your password" required
+            <input id="password" name="password" type="password" placeholder="Enter your password" required
               class="w-full bg-gray-700 text-gray-200 rounded-lg px-3 py-2 focus:outline-none focus:ring-2 focus:ring-blue-500">
             
             <!-- Eye icon to toggle password visibility -->
@@ -126,9 +126,9 @@
         <div class="flex justify-between items-center text-sm text-gray-400">
           <label class="flex items-center gap-2">
             <!-- This checkbox allows saving username locally if checked -->
-            <input type="checkbox" class="form-checkbox text-blue-600" id="rememberMe"> Remember me
+            <input type="checkbox" name="rememberMe" class="form-checkbox text-blue-600" id="rememberMe"> Remember me
           </label>
-          <a href="recover.html" class="text-blue-400 hover:underline">Forgot Password?</a>
+          <a href="{{ url_for('recover_page') }}" class="text-blue-400 hover:underline">Forgot Password?</a>
         </div>
 
         <!-- Sign In Button -->
@@ -163,7 +163,7 @@
         <!-- Sign Up Link -->
         <p class="text-center text-sm text-gray-400 mt-5">
           Don’t have an account? 
-          <a href="signup.html" class="text-green-400 hover:underline font-medium">Create Account</a>
+          <a href="{{ url_for('signup_page') }}" class="text-green-400 hover:underline font-medium">Create Account</a>
         </p>
       </form>
     </div>
@@ -177,7 +177,7 @@
   <footer class="bg-blue-900 border-t border-gray-800 p-4 flex items-center justify-between">
     <div class="flex items-center gap-3">
       <div class="h-10 w-10">
-        <img src="../static/images/logo.png" alt="Move It Logo" class="h-full w-full object-contain rounded-lg">
+        <img src="{{ url_for('static', filename='images/logo.png') }}" alt="Move It Logo" class="h-full w-full object-contain rounded-lg">
       </div>
       <p class="text-gray-200 text-sm">@2025 Move It! All rights reserved.</p>
     </div>
