--- a/templates2/recover.html
+++ b/templates2/recover.html
@@ -21,7 +21,7 @@
   ================================ -->
   <header class="flex items-center justify-between px-8 py-4 bg-blue-900 shadow-md">
     <div class="flex items-center space-x-2">
-      <img src="../static/images/logo.png" alt="Move It Logo" class="h-8 w-8">
+      <img src="{{ url_for('static', filename='images/logo.png') }}" alt="Move It Logo" class="h-8 w-8">
       <h1 class="text-xl font-semibold text-white">Move It!</h1>
     </div>
     <nav class="space-x-6 text-gray-300">
@@ -42,7 +42,7 @@
       
       <!-- Section: Title and Instructions -->
       <div class="flex flex-col items-center mb-6">
-        <img src="../static/images/logo.png" alt="Move It Logo" class="h-12 mb-2">
+        <img src="{{ url_for('static', filename='images/logo.png') }}" alt="Move It Logo" class="h-12 mb-2">
         <h2 class="text-2xl font-bold text-white">Password Recovery</h2>
         <p class="text-gray-400 text-sm mt-1 text-center">
           Enter your username or email to reset your password
@@ -114,6 +114,6 @@
        JAVASCRIPT SECTION
        Loads existing `auth.js` to handle password recovery logic.
   ================================ -->
-  <script src="../static/js/auth.js"></script>
+  <script src="{{ url_for('static', filename='js/auth.js') }}"></script>
 </body>
 </html>
