--- a/templates2/signup.html
+++ b/templates2/signup.html
@@ -42,7 +42,7 @@
   ========================================================== -->
   <header class="flex items-center justify-between px-8 py-4 bg-blue-900 shadow-md">
     <div class="flex items-center space-x-2">
-      <img src="../static/images/logo.png" alt="Move It Logo" class="h-8 w-8">
+      <img src="{{ url_for('static', filename='images/logo.png') }}" alt="Move It Logo" class="h-8 w-8">
       <h1 class="text-xl font-semibold text-white">Move It!</h1>
     </div>
 
@@ -66,7 +66,7 @@
 
       <!-- FORM HEADER / LOGO -->
       <div class="flex flex-col items-center mb-6">
-        <img src="../static/images/logo.png" alt="Move It Logo" class="h-12 mb-2">
+        <img src="{{ url_for('static', filename='images/logo.png') }}" alt="Move It Logo" class="h-12 mb-2">
         <h2 class="text-2xl font-bold text-white">Create Account</h2>
         <p class="text-gray-400 text-sm mt-1">Start organizing your productivity journey</p>
       </div>
@@ -78,7 +78,7 @@
         <!-- USER'S FULL NAME -->
         <div>
           <label for="name" class="block text-sm font-medium mb-1 text-gray-300">Full Name</label>
-          <input id="name" type="text" placeholder="Enter your full name" required
+          <input id="name" name="name" type="text" placeholder="Enter your full name" required
                  class="w-full px-4 py-2 rounded-lg bg-gray-700 border border-gray-600 text-white 
                         focus:ring-2 focus:ring-blue-500 outline-none">
         </div>
@@ -86,7 +86,7 @@
         <!-- USERNAME / EMAIL -->
         <div>
           <label for="username" class="block text-sm font-medium mb-1 text-gray-300">Username or Email</label>
-          <input id="username" type="text" placeholder="Enter your username or email" required
+          <input id="username" name="username" type="text" placeholder="Enter your username or email" required
                  class="w-full px-4 py-2 rounded-lg bg-gray-700 border border-gray-600 text-white 
                         focus:ring-2 focus:ring-blue-500 outline-none">
         </div>
@@ -94,7 +94,7 @@
         <!-- PASSWORD FIELD -->
         <div>
           <label for="password" class="block text-sm font-medium mb-1 text-gray-300">Password</label>
-          <input id="password" type="password" placeholder="Create your password" required
+          <input id="password" name="password" type="password" placeholder="Create your password" required
                  class="w-full px-4 py-2 rounded-lg bg-gray-700 border border-gray-600 text-white 
                         focus:ring-2 focus:ring-blue-500 outline-none">
         </div>
@@ -114,7 +114,7 @@
       <!-- REDIRECT TO LOGIN -->
       <p class="text-center text-sm text-gray-400 mt-6">
         Already have an account?
-        <a href="login.html" class="text-blue-400 hover:underline">Sign In</a>
+        <a href="{{ url_for('login_page') }}" class="text-blue-400 hover:underline">Sign In</a>
       </p>
     </div>
   </main>
@@ -136,6 +136,6 @@
          - Local storage management
          - Validation and redirection
   ========================================================== -->
-  <script src="../static/js/auth.js"></script>
+  <script src="{{ url_for('static', filename='js/signup.js') }}"></script>
 </body>
 </html>
